--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,11 @@ hr {
     .footer .list-item-inline{
         padding: 0rem;
     }
+
+    .footer .social-links .list-item-inline{
+        padding: 0rem;
+    }
+
     .footer .social-links {
         display: grid;
         grid-auto-columns: auto;
@@ -237,8 +242,21 @@ hr {
 
 }
 
+@media only screen and (max-width:360px) {
+   
+   .footer .social-links .link img{
+    width: 1rem;
+    height: 1rem;
+    margin:0px;
+    }
+    
+    .footer .social-links .list-item-inline .link {    
+        padding: 0;
+        margin: 0;
+    }
+
+}
 
 /* .list-item-inline .last {
     
 } */
-
